# datasette-scan

./: README.md  pyproject.toml
datasette_scan/: __init__.py
tests/: test_scan.py
