[project]
name = "datasette-scan"
version = "0.1.1"
description = "Datasette plugin for scanning for SQLite files"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette",
    "sqlite-scanner>=0.1.1"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/simonw/datasette-scan"
Changelog = "https://github.com/simonw/datasette-scan/releases"
Issues = "https://github.com/simonw/datasette-scan/issues"
CI = "https://github.com/simonw/datasette-scan/actions"

[project.entry-points.datasette]
scan = "datasette_scan"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

